<resources>
    <string name="app_name">Lazy mans cooking</string>
    <string name="logout">Logout</string>
    <string name="DialogMessage">Are you sure you want to sign out?</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_recipe_fragment">Test</string>
    <string name="strTitle">Title</string>
    <string name="strDescription">Description</string>

    <!-- add NAV -->
    <string name="nav_overview">Overview</string>
    <string name="nav_add_recipe">Add recipe</string>
    <string name="nav_favorite_recipe">Favorite recipe</string>
    <string name="nav_my_recipe">My recipe</string>
    <string name="nav_options">options</string>
    <string name="nav_logout">logout</string>

    <!-- add Login -->
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="anonymous_users">Continue without login</string>

    <!-- add Register -->
    <string name="register">Register</string>
    <string name="email">Email</string>

    <!-- add recipe page -->
    <string name="add_recipe">Add recipe</string>
    <string name="recipe_name">Recipe name</string>
    <string name="insert_recipe_name">Insert recipe name</string>
    <string name="ingredients">Ingredients</string>
    <string name="insert_ingredients">Insert ingredients</string>
    <string name="recipe_description">Description</string>
    <string name="insert_description">Insert description</string>
    <string name="recipe_image">Image</string>
    <string name="add">Add</string>
    <string name = "search_emptyOptions">No available options</string>

    <!-- recipe detail page -->
    <string name ="add_to_Favorites">Add to Favorites</string>
    <string name ="share_on_Facebook">Share Recipe</string>

    <!-- search category page -->
    <string name = "search_ingredients">Chosen ingredients</string>
    <string name = "search_categories">Available ingredient categories</string>
    <string name = "search_empty">Your chosen ingredients\r\n will be here!</string>
    <string name = "search_button">Search</string>

    <!-- search category page -->
    <string name = "add_options">Options</string>
    <string name = "save_my_recipe_local">Save my recipe local</string>
    <string name = "yesno">Yes</string>
    <string name = "auto_login">Automatically login</string>
    <string name = "save">Save</string>

    <!-- parse ids -->
    <string name="parse_app_id">PuPGePBSCLlAsCqISYYavaMilT8kjxeTSKVkdL6H</string>
    <string name="parse_client_id">7UFaGvJYlQrRdQA9LQN0g8kPWt8WcCaAPuw3HrAy</string>
    <string name="facebook_app_id">1658056894457055</string>

    <!-- add id -->
    <string name="banner_ad_unit_id">ca-app-pub-3588637505492394/5653121068</string>
</resources>
