<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe"
            android:textAlignment="center"
            android:textSize="40dp"/>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/viewName"
                android:text="@string/recipe_name"
                android:layout_width="wrap_content"
                android:layout_weight="0.3"/>
            <EditText
                android:id="@+id/txtTitle"
                android:hint="@string/insert_recipe_name"
                android:inputType="textPersonName"
                android:layout_weight="0.7"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/viewDescription"
                android:text="@string/recipe_description"
                android:layout_width="wrap_content"
                android:layout_weight="0.3"/>
            <EditText
                android:id="@+id/txtDescription"
                android:hint="@string/insert_description"
                android:layout_weight="0.7"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/viewImage"
                android:text="@string/recipe_image"
                android:inputType="textPersonName"
                android:layout_weight="0.3"/>

            <LinearLayout
                android:layout_weight="0.7">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxHeight="200dp"
                    android:src="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/btn_pick"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/recipe_image" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/viewIngredients"
                android:text="@string/ingredients"
                android:inputType="textPersonName"
                android:layout_weight="0.3"/>
            <ListView
                android:id="@+id/listViewIngredients"
                android:layout_weight="0.7"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnAddRecipe"
                android:text="@string/add"
                android:layout_span="2"
                android:onClick="addRecipe"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:background="#005eb1"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:nestedScrollingEnabled="false" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
