<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/cooking_portrait">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sign_in"
            android:id="@+id/textView2"
            android:layout_column="0"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/viewUsername"
                android:text="@string/username"
                android:textSize="20dp"/>
            <EditText
                android:id="@+id/txtUsername"
                android:hint="Username"
                android:inputType="textPersonName"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/viewPassword"
                android:text="@string/password"
                android:textSize="20dp"/>
            <EditText
                android:id="@+id/txtPassword"
                android:hint="Password"
                android:inputType="textPassword"
                android:minWidth="150dp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnRegister"
                android:text="Register"
                android:onClick="register"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnLogon"
                android:text="Login"
                android:onClick="login"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymous_users"
                android:id="@+id/textView3"
                android:onClick="anonymous"
                android:layout_span="4"
                android:textSize="20dp"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </TableRow>
    </TableLayout>
</LinearLayout>